# hrmslite

./: dev.sh  main.py  pyproject.toml
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/employee/: layout.tsx  page.tsx
frontend/app/employee/attendance/: page.tsx
frontend/lib/: api.ts
hrmslite/: manage.py  schema.yml
hrmslite/employee/: models.py  serializers.py  urls.py  views.py
hrmslite/employee/migrations/: 0001_initial.py
hrmslite/hrmslite/: asgi.py  settings.py  urls.py  wsgi.py
